[tool.poetry]
name = "my-repository-traffic"
version = "0.1.0"
description = ""
authors = ["minseokkang <aaaa727@khu.ac.kr>"]
readme = "README.md"
packages = [{include = "my_repository_traffic"}]

[tool.poetry.dependencies]
python = "^3.10"
github = "^1.2.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
