[tool.poetry]
name = "my-repository-traffic"
version = "0.1.0"
description = ""
authors = ["minseokkang <aaaa727@khu.ac.kr>"]
readme = "README.md"
packages = [{include = "my_repository_traffic"}]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.28.1"
datetime = "^4.9"
pytest = "^7.2.0"
pytest-async = "^0.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
