[tool.poetry]
name = "my-repository-traffic"
version = "0.1.0"
description = ""
authors = ["minseokkang <aaaa727@khu.ac.kr>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.28.1"
datetime = "^4.9"
pytest = "^7.2.0"
pytest-async = "^0.1.1"
pygithub = "^1.57"
pytest-asyncio = "^0.20.3"
pytest-mock = "^3.10.0"
pytz = "^2022.7"
pandas = "^1.5.3"
python-dotenv = "^0.21.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
